<resources>
    <string name="app_name">SAndroid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">设置</string>

    <string name="menu_space">奇遇空间</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_login">登录</string>
    <string name="network_setting">网络设置</string>
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="rememberPassWd">记住密码</string>
    <string name="autoLogin">自动登录</string>
    <string name="login_title">登录</string>
    <string name="register_title">注册\n（原生登录TEST）</string>
    <string name="menu_request">请求\n(短按GET请求，长按POST请求)</string>
    <string name="default_url">https://www.baidu.com</string>
    <string name="menu_httpTester">httpTester</string>
    <string name="menu_feedback">意见反馈</string>
    <string name="feedback_title">标题</string>
    <string name="feedback_content"><![CDATA[请输入您的意见…]]></string>
    <string name="feedback_phoneNum">手机号码</string>
    <string name="feedback_submit">提交</string>
    <string name="menu_trafficManager">红绿灯管理</string>
    <string name="traffic_manager_title">红绿灯信息管理</string>
    <string name="traffic_manager_sort_title">排序</string>
    <string name="traffic_manager_check_title">查询</string>
    <string name="title_id">路口</string>
    <string name="title_red_duration">红灯时长(s)</string>
    <string name="title_green_duration">绿灯时长(s)</string>
    <string name="title_yellow_duration">黄灯时长(s)</string>
    <string name="data_default_int">0</string>
    <string name="menu_illegalManager">车辆违章</string>
    <string name="title_illegal_video">违章视频</string>
    <string name="title_illegal_picture">违章图片</string>
    <string name="menu_videoPlayer">视频预览</string>
    <string name="menu_imageViewer">图片预览</string>
    <string name="menu_envManager">环境管理</string>
    <string name="title_env_1">温度</string>
    <string name="title_env_2">湿度</string>
    <string name="data_env_1">32</string>
    <string name="data_env_2">80</string>
    <string name="action_readFile">测试读文件</string>
    <string name="action_writeFile">测试写文件</string>
    <string name="action_textToArray">文字转数组</string>
    <string name="action_arrayToText">数组转文字</string>
    <string name="action_delFile">删除DATA文件</string>
    <string name="title_activity_splash">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="menu_webview">浏览器</string>
    <string name="menu_setting">设置</string>
    <string name="bottom_navigation_main">主页</string>
    <string name="bottom_navigation_about">关于</string>
    <string name="menu_bottom_main">主页</string>
    <string name="menu_bottom_about">关于</string>
    <string name="menu_ad_webview">AD浏览器</string>
    <string name="action_download_manager">下载管理器</string>
    <string name="menu_download_manager">下载管理器</string>
    <string name="test_1">下载器测试1</string>
    <string name="test_2">下载器测试2</string>
    <string name="unknown_name">N/A</string>
    <string name="unknown_file_type">N/A</string>
    <string name="test_3">下载器测试3</string>
    <string name="no_more_data">暂无更多内容</string>
    <string name="menu_setting_lab">开发人员选项</string>
    <string name="action_settings_lab">开发人员选项</string>
    <string name="menu_bottom_video_recommend">视频推荐</string>
    <string name="bottom_navigation_video_recommend">视频推荐</string>
    <string name="is_refreshing">正在刷新</string>
    <string name="is_loading">正在加载</string>
    <string name="menu_bottom_music_area">音乐广场</string>
    <string name="bottom_navigation_music_area">音乐广场</string>
    <string name="title_music_area_recommend">音乐推荐</string>
    <string name="title_music_area_search">音乐搜索</string>
    <string name="action_music_area">音乐广场</string>
    <string name="menu_music_search_uperation">音乐搜索</string>
    <string name="bottom_navigation_video_area">视频广场</string>
    <string name="menu_bottom_video_area">视频广场</string>
    <string name="title_video_area_search">抖音解析</string>
    <string name="title_video_area_recommend">视频推荐</string>
    <string name="notice_copy_awesome_link">请点击下方按钮从剪贴板粘贴抖音内容的分享链接</string>
    <string name="video_resolver_paste">从剪贴板导入</string>
    <string name="video_resolver_operation">链接解析</string>
    <string name="video_resolver_clear">清空</string>
    <string name="is_resolving">正在解析</string>
    <string name="video_resolver_operation_preview">预览</string>
    <string name="video_resolver_operation_download">下载</string>
    <string name="video_resolver_operation_preview_backup">预览(备用通道)</string>
    <string name="video_resolver_operation_download_browser">第三方下载</string>
</resources>