<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/network_setting"
        android:orderInCategory="90"
        android:title="@string/network_setting"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_read"
        android:orderInCategory="100"
        android:title="@string/action_readFile"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_write"
        android:orderInCategory="100"
        android:title="@string/action_writeFile"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_textToArray"
        android:orderInCategory="100"
        android:title="@string/action_textToArray"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_arrayToText"
        android:orderInCategory="100"
        android:title="@string/action_arrayToText"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delFile"
        android:orderInCategory="100"
        android:title="@string/action_delFile"
        app:showAsAction="never" />
</menu>