<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.tristana.sandroid.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.tristana.sandroid.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.tristana.sandroid.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_httpTester"
        android:name="com.tristana.sandroid.ui.httpTester.HttpTesterFragment"
        android:label="@string/menu_httpTester"
        tools:layout="@layout/fragment_http_tester" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.tristana.sandroid.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_feedback"
        android:name="com.tristana.sandroid.ui.feedback.FeedbackFragment"
        android:label="@string/menu_feedback"
        tools:layout="@layout/fragment_feedback" />

    <fragment
        android:id="@+id/nav_trafficManager"
        android:name="com.tristana.sandroid.ui.trafficManager.TrafficManagerFragment"
        android:label="@string/menu_trafficManager"
        tools:layout="@layout/fragment_traffic_manager" />

    <fragment
        android:id="@+id/nav_illegalManager"
        android:name="com.tristana.sandroid.ui.illegalManager.IllegalManagerFragment"
        android:label="@string/menu_illegalManager"
        tools:layout="@layout/fragment_illegal_manager" />

    <fragment
        android:id="@+id/nav_videoPlayer"
        android:name="com.tristana.sandroid.ui.illegalManager.fragment.video.player.VideoPlayerFragment"
        android:label="@string/menu_videoPlayer"
        tools:layout="@layout/fragment_video_player" />

    <fragment
        android:id="@+id/nav_imageViewer"
        android:name="com.tristana.sandroid.ui.illegalManager.fragment.picture.viewer.ImageViewerFragment"
        android:label="@string/menu_imageViewer"
        tools:layout="@layout/fragment_image_viewer" />

    <fragment
        android:id="@+id/nav_envManager"
        android:name="com.tristana.sandroid.ui.envManager.EnvFragment"
        android:label="@string/menu_envManager"
        tools:layout="@layout/fragment_image_viewer" />

</navigation>