<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_navigation_main"
        android:icon="@drawable/bottom_navigation_main_icon"
        android:title="@string/bottom_navigation_main" />

    <item
        android:id="@+id/bottom_navigation_music_area"
        android:icon="@drawable/bottom_navigation_music_area_icon"
        android:title="@string/bottom_navigation_music_area" />

    <item
        android:id="@+id/bottom_navigation_video_area"
        android:icon="@drawable/bottom_navigation_video_area_icon"
        android:title="@string/bottom_navigation_video_area" />

    <item
        android:id="@+id/bottom_navigation_about"
        android:icon="@drawable/bottom_navigation_about_icon"
        android:title="@string/bottom_navigation_about" />

</menu>