<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/bottom_navigation_main">

    <fragment
        android:id="@+id/bottom_navigation_main"
        android:name="com.tristana.sandroid.ui.main.MainFragment"
        android:label="@string/menu_bottom_main"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/bottom_navigation_music_area"
        android:name="com.tristana.sandroid.ui.music.area.MusicAreaFragment"
        android:label="@string/menu_bottom_music_area"
        tools:layout="@layout/fragment_music_area" />

    <fragment
        android:id="@+id/bottom_navigation_video_area"
        android:name="com.tristana.sandroid.ui.video.area.VideoAreaFragment"
        android:label="@string/menu_bottom_video_area"
        tools:layout="@layout/fragment_video_area" />

    <fragment
        android:id="@+id/bottom_navigation_about"
        android:name="com.tristana.sandroid.ui.about.AboutFragment"
        android:label="@string/menu_bottom_about"
        tools:layout="@layout/fragment_about" />


</navigation>