<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.downloader.DownloadManagerFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:nestedScrollingEnabled="false"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/test_downloader_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/test_downloader_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_2" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/test_downloader_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_3" />

            <com.airbnb.epoxy.EpoxyRecyclerView
                android:id="@+id/downloader_task_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>