<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.video.area.resolver.VideoResolverFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="48dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@drawable/custom_video_resolver_background"
                android:padding="12dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/video_resolver_link_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/notice_copy_awesome_link"
                    android:lines="5" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/video_resolver_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:background="@drawable/custom_video_resolver_button_background"
                    android:text="@string/video_resolver_clear"
                    android:textAlignment="center"
                    android:textColor="@color/red_8B475D"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/video_resolver_from_clipboard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_video_resolver_button_background"
                    android:text="@string/video_resolver_paste"
                    android:textAlignment="center"
                    android:textColor="@color/red_8B475D"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/video_resolver_operation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_video_resolver_button_background"
                    android:text="@string/video_resolver_operation"
                    android:textAlignment="center"
                    android:textColor="@color/red_8B475D"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="@color/colorTitleBg" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/video_resolver_empty"
                    android:layout_width="match_parent"
                    android:layout_height="360dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:src="@drawable/icon_video_resolver_empty"
                    android:visibility="visible" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/video_resolver_preview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:background="@drawable/custom_video_resolver_button_background"
                    android:text="@string/video_resolver_operation_preview"
                    android:textAlignment="center"
                    android:textColor="@color/red_8B475D"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/video_resolver_preview_backup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:background="@drawable/custom_video_resolver_button_background"
                    android:text="@string/video_resolver_operation_preview_backup"
                    android:textAlignment="center"
                    android:textColor="@color/red_8B475D"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/video_resolver_download"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:background="@drawable/custom_video_resolver_button_background"
                    android:text="@string/video_resolver_operation_download"
                    android:textAlignment="center"
                    android:textColor="@color/red_8B475D"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>